--- a/app/src/main/res/layout/activity_new_sight_page.xml
+++ b/app/src/main/res/layout/activity_new_sight_page.xml
@@ -63,7 +63,7 @@
                     android:textSize="16dp" />
 
                 <EditText
-                    android:id="@+id/UsernameEtxt"
+                    android:id="@+id/EmailEtxt"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginLeft="15dp"
