--- a/app/src/main/res/layout/activity_new_sight_page.xml
+++ b/app/src/main/res/layout/activity_new_sight_page.xml
@@ -41,7 +41,7 @@
                 android:textStyle="bold" />
 
             <LinearLayout
-                android:id="@+id/EmailLay"
+                android:id="@+id/SpeciesNameLay"
                 android:layout_width="360dp"
                 android:layout_height="wrap_content"
                 android:layout_below="@id/HotspotDetsHtxt"
@@ -63,7 +63,7 @@
                     android:textSize="16dp" />
 
                 <EditText
-                    android:id="@+id/EmailEtxt"
+                    android:id="@+id/SpeciesNameEtxt"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginLeft="15dp"
@@ -80,7 +80,7 @@
                 android:id="@+id/HotspotLay"
                 android:layout_width="360dp"
                 android:layout_height="wrap_content"
-                android:layout_below="@id/EmailLay"
+                android:layout_below="@id/SpeciesNameLay"
                 android:layout_centerHorizontal="true"
                 android:layout_marginTop="15dp"
                 android:background="@drawable/edit_text_border"
