--- a/app/src/main/res/layout/activity_register_page.xml
+++ b/app/src/main/res/layout/activity_register_page.xml
@@ -45,7 +45,7 @@
                 android:textSize="80sp" />
 
             <LinearLayout
-                android:id="@+id/EmailLay"
+                android:id="@+id/SpeciesNameLay"
                 android:layout_width="329dp"
                 android:layout_height="80dp"
                 android:layout_below="@id/Registertxt"
@@ -67,7 +67,7 @@
                     android:textSize="18dp" />
 
                 <EditText
-                    android:id="@+id/EmailEtxt"
+                    android:id="@+id/SpeciesNameEtxt"
                     android:layout_width="329dp"
                     android:layout_height="wrap_content"
                     android:layout_below="@id/EmailHtxt"
@@ -87,7 +87,7 @@
                 android:id="@+id/UserLay"
                 android:layout_width="329dp"
                 android:layout_height="80dp"
-                android:layout_below="@id/EmailLay"
+                android:layout_below="@id/SpeciesNameLay"
                 android:layout_centerHorizontal="true"
                 android:layout_marginTop="20dp"
                 android:background="@drawable/edit_text_border"
