--- a/app/src/main/res/layout/fragment_observations2.xml
+++ b/app/src/main/res/layout/fragment_observations2.xml
@@ -35,6 +35,7 @@
                 android:text="Filter:"
                 android:textColor="@color/black"
                 android:textSize="22sp" />
+
             <TextView
                 android:id="@+id/locSeenHtxt"
                 android:layout_width="140dp"
@@ -44,6 +45,16 @@
                 android:textColor="#000000"
                 android:textSize="18dp"
                 android:textStyle="bold|italic" />
+
+            <Spinner
+                android:id="@+id/LocationSpinner"
+                android:layout_width="match_parent"
+                android:layout_height="48dp"
+                android:layout_marginTop="0dp"
+                android:layout_weight="1"
+                android:backgroundTint="#000000"
+                android:spinnerMode="dropdown"
+                android:textAlignment="textEnd" />
         </LinearLayout>
 
         <LinearLayout
@@ -75,7 +86,7 @@
                 android:layout_weight="1"
                 android:fontFamily="@font/alfa_slab_one"
                 android:textColor="@color/black"
-                android:textSize="16dp"/>
+                android:textSize="16dp" />
 
             <Button
                 android:id="@+id/calendarbtn"
@@ -85,14 +96,31 @@
 
         </LinearLayout>
 
-        <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/recyclerView"
-            android:layout_width="match_parent"
+        <Button
+            android:id="@+id/Filterbtn"
+            android:layout_width="204dp"
             android:layout_height="wrap_content"
-            android:padding="8dp"
-            tools:listitem="@layout/item_obs" />
+            android:layout_gravity="center_horizontal"
+            android:fontFamily="@font/alfa_slab_one"
+            android:text="Filter"
+            android:textColor="#000000"
+            android:textSize="16sp" />
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="vertical">
+
+            <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/recyclerView"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:padding="5dp"
+                tools:listitem="@layout/item_obs" />
+        </LinearLayout>
 
     </LinearLayout>
+
     <Button
         android:id="@+id/newSightbtn"
         android:layout_width="130dp"
