--- a/app/src/main/res/layout/fragment_map2.xml
+++ b/app/src/main/res/layout/fragment_map2.xml
@@ -11,6 +11,10 @@
         android:layout_height="715dp"
         android:layout_marginLeft="10dp">
 
+        <com.google.android.gms.maps.MapView
+            android:id="@+id/mapView"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" />
     </RelativeLayout>
 
     <Button
