--- a/app/src/main/res/layout/activity_hotspot_dets_page.xml
+++ b/app/src/main/res/layout/activity_hotspot_dets_page.xml
@@ -132,17 +132,35 @@
                     android:textColor="#000000"
                     android:textSize="18dp" />
 
-                <TextView
-                    android:id="@+id/DistanceFromtxt"
+                <LinearLayout
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginLeft="20dp"
-                    android:backgroundTint="#00FFFFFF"
-                    android:ems="10"
-                    android:fontFamily="@font/alfa_slab_one"
-                    android:textColor="#000000"
-                    android:textSize="16dp"
-                    android:textStyle="italic" />
+                    android:layout_height="match_parent"
+                    android:orientation="horizontal">
+
+                    <TextView
+                        android:id="@+id/DistanceFromtxt"
+                        android:layout_width="60dp"
+                        android:layout_height="wrap_content"
+                        android:layout_marginLeft="20dp"
+                        android:backgroundTint="#00FFFFFF"
+                        android:ems="10"
+                        android:fontFamily="@font/alfa_slab_one"
+                        android:textColor="#000000"
+                        android:textSize="16dp"
+                        android:textStyle="italic" />
+
+                    <TextView
+                        android:id="@+id/Unitstxt"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginLeft="5dp"
+                        android:backgroundTint="#00FFFFFF"
+                        android:ems="10"
+                        android:fontFamily="@font/alfa_slab_one"
+                        android:textColor="#000000"
+                        android:textSize="16dp"
+                        android:textStyle="italic" />
+                </LinearLayout>
 
                 <TextView
                     android:id="@+id/emptytxt"
