--- a/app/src/main/res/layout/fragment_map2.xml
+++ b/app/src/main/res/layout/fragment_map2.xml
@@ -14,7 +14,7 @@
         <com.google.android.gms.maps.MapView
             android:id="@+id/mapView"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content" />
+            android:layout_height="715dp" />
     </RelativeLayout>
 
     <Button
@@ -27,10 +27,27 @@
         android:background="@drawable/button_selector"
         android:backgroundTint="#000000"
         android:fontFamily="@font/alfa_slab_one"
-        android:rotation="4"
+        android:rotation="-4"
         android:rotationX="8"
         android:rotationY="-8"
         android:text="New Sighting"
+        android:textColor="#000000"
+        android:textSize="14dp" />
+
+    <Button
+        android:id="@+id/navigatebtn"
+        android:layout_width="130dp"
+        android:layout_height="wrap_content"
+        android:layout_gravity="bottom|left"
+        android:layout_marginLeft="10dp"
+        android:layout_marginBottom="10dp"
+        android:background="@drawable/button_selector"
+        android:backgroundTint="#000000"
+        android:fontFamily="@font/alfa_slab_one"
+        android:rotation="4"
+        android:rotationX="8"
+        android:rotationY="4"
+        android:text="Navigate"
         android:textColor="#000000"
         android:textSize="14dp" />
 </FrameLayout>
