--- a/app/src/main/res/layout/fragment_profand_set.xml
+++ b/app/src/main/res/layout/fragment_profand_set.xml
@@ -62,6 +62,7 @@ tools:context=".ProfandSetFragment">
         android:layout_height="48dp"
         android:layout_marginTop="0dp"
         android:backgroundTint="#000000"
+        android:dropDownSelector="@color/black"
         android:spinnerMode="dropdown"
         android:textAlignment="textEnd" />
 
@@ -100,7 +101,8 @@ tools:context=".ProfandSetFragment">
             android:layout_width="111dp"
             android:layout_height="wrap_content"
             android:ems="10"
-            android:inputType="textPersonName" />
+            android:inputType="textPersonName"
+            android:textColor="#000000" />
 
         <TextView
             android:id="@+id/DistanceUnitstxt"
@@ -109,7 +111,8 @@ tools:context=".ProfandSetFragment">
             android:layout_marginTop="0dp"
             android:layout_marginRight="0dp"
             android:text="Km"
-            android:textAlignment="textEnd" />
+            android:textAlignment="textEnd"
+            android:textColor="#000000" />
     </LinearLayout>
 
     <Button
