--- a/app/src/main/res/values/preloaded_fonts.xml
+++ b/app/src/main/res/values/preloaded_fonts.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <array name="preloaded_fonts" translatable="false">
-        <item>@font/</item>
         <item>@font/alfa_slab_one</item>
+        <item>@font/architects_daughter</item>
         <item>@font/berkshire_swash</item>
         <item>@font/lily_script_one</item>
         <item>@font/lobster</item>
