--- a/app/src/main/res/layout/activity_journal_entry_page.xml
+++ b/app/src/main/res/layout/activity_journal_entry_page.xml
@@ -63,7 +63,7 @@
                     android:textSize="18dp" />
 
                 <EditText
-                    android:id="@+id/editTextTextMultiLine2"
+                    android:id="@+id/entryEdittxt"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginLeft="15dp"
@@ -74,10 +74,21 @@
                     android:inputType="textMultiLine"
                     android:textColor="#000000"
                     android:textSize="15sp" />
-
-
             </LinearLayout>
-
         </RelativeLayout>
     </ScrollView>
+    <Button
+        android:id="@+id/Savebtn"
+        android:layout_width="188dp"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginEnd="5dp"
+        android:layout_marginBottom="5dp"
+        android:background="@drawable/button_selector"
+        android:fontFamily="@font/alfa_slab_one"
+        android:gravity="center"
+        android:text="Save"
+        android:textColor="#000000"
+        android:textSize="28sp" />
 </RelativeLayout>
